--- a/shop-item/shop-item-interface/pom.xml
+++ b/shop-item/shop-item-interface/pom.xml
@@ -12,5 +12,13 @@
     <groupId>com.yx</groupId>
     <artifactId>shop-item-interface</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
